--- a/Parallax #2/styles/main.css
+++ b/Parallax #2/styles/main.css
@@ -29,6 +29,7 @@ body {
 	width: 100%;
 	height: 100%;
 	text-align: center;
+	text-transform: uppercase;
 	color: #636b6f;
 	font-weight: 100;
 }
@@ -38,22 +39,117 @@ body {
 	position: absolute;
 	color: #ffffff;
 	border: 5px solid #ffffff;
-	font-weight: 500;
+	font-weight: bold;
 	top: 30%;
 	left: 50%;
 	padding: 20px;
 	background-color: #fff;
-	background: url(../images/im1.jpg) no-repeat;
+	background: url(../images/im3.jpg) no-repeat;
 	transform: translate(-50%, -50%);
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
 
 .main .body-container {
-	height: 100vh;
+	position: relative;
+	min-height: 150vh;
 	margin-top: 100vh;
 	background-color: #fff;
 	z-index: 1;
+}
+
+.body-container nav {
+	width: 100vw;
+	min-height: 70px;
+	opacity: 0;
+	transition: all 2.5s ease;
+}
+
+.body-container nav ul {
+	list-style: none;
+	padding: 10px;
+	float: right;
+	margin-right: 20px;
+}
+
+.body-container nav ul li {
+	display: inline;
+	margin-right: 30px;
+	font-weight: 100;
+	color: rgba(0, 0, 0, .6);
+	transition: 0.2s linear;
+	cursor: pointer;
+	border-bottom: 1px solid rgba(0, 0, 0, .0);
+	transition: all 0.5s linear;
+}
+
+.body-container nav ul li:hover {
+	border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.sticky-nav-bar {
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 2;
+	opacity: 1;
+}
+
+.body-container .subtitle {
+	position: relative;
+	top: 100%;
+	left: 45%;
+	font-size: 26px;
+	transition: all 2.5s ease;
+	transform: translateY(800%);
+	color: rgba(0, 0, 0, 0.5);
+}
+
+.body-container .subtitle:after {
+	position: absolute;
+	content: '';
+	top: 50%;
+	right: 77%;
+	background-color: rgba(0, 0, 0, 0.3);
+	width: 6%;
+	height: 2px;
+}
+
+.body-container .subtitle::before {
+	position: absolute;
+	content: '';
+	top: 50%;
+	left: -8%;
+	background-color: rgba(0, 0, 0, 0.3);
+	width: 6%;
+	height: 2px;
+}
+
+.body-container .subtitle.hidden {
+	font-weight: 10;
+	transform: translateY(400%);
+	opacity: 0;
+}
+
+.body-container .features {
+	position: relative;
+	background-color: rgba(0, 0, 0, 0.03);
+	transform: translateY(70%);
+	height: 500px;
+	display: flex;
+}
+
+.body-container .features div:nth-child(1),
+.body-container .features div:nth-child(2),
+.body-container .features div:nth-child(3) {
+	position: relative;
+	width: 33%;
+	height: 100%;
+	background: #fff;
+	margin: 20px;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	border-radius: 5px;
 }
 
 ::-webkit-scrollbar {
