Change features form

--- a/Parallax #2/styles/main.css
+++ b/Parallax #2/styles/main.css
@@ -96,31 +96,22 @@ body {
 }
 
 .body-container .subtitle {
-	position: relative;
-	top: 100%;
-	left: 45%;
 	font-size: 26px;
 	transition: all 2.5s ease;
 	transform: translateY(800%);
 	color: rgba(0, 0, 0, 0.5);
+	margin: auto;
+	text-align: center;
 }
 
 .body-container .subtitle:after {
-	position: absolute;
-	content: '';
-	top: 50%;
-	right: 77%;
-	background-color: rgba(0, 0, 0, 0.3);
+	content: ' -';
 	width: 6%;
 	height: 2px;
 }
 
 .body-container .subtitle::before {
-	position: absolute;
-	content: '';
-	top: 50%;
-	left: -8%;
-	background-color: rgba(0, 0, 0, 0.3);
+	content: '- ';
 	width: 6%;
 	height: 2px;
 }
@@ -133,7 +124,6 @@ body {
 
 .body-container .features {
 	position: relative;
-	background-color: rgba(0, 0, 0, 0.03);
 	transform: translateY(70%);
 	height: 500px;
 	display: flex;
@@ -143,13 +133,29 @@ body {
 .body-container .features div:nth-child(2),
 .body-container .features div:nth-child(3) {
 	position: relative;
-	width: 33%;
-	height: 100%;
-	background: #fff;
-	margin: 20px;
+	width: 30%;
+	height: 90%;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
+	margin: auto;
 	border-radius: 5px;
+}
+
+.body-container .features div:nth-child(1) {
+	background-color: rgba(0, 0, 0, 0.05);
+	height: 80%;
+	right: -300px;
+}
+
+.body-container .features div:nth-child(2) {
+	background-color: rgb(32, 69, 124);
+}
+
+.body-container .features div:nth-child(3) {
+	background-color: rgba(0, 0, 0, 0.05);
+	height: 80%;
+	left: -300px;
+	z-index: -1;
 }
 
 ::-webkit-scrollbar {
